--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -100,4 +100,13 @@
     <string name="action_post_natallabel">Post Natal</string>
     <string name="skip">Skip</string>
     <string name="exit_menu">Logout</string>
+    <string name="welcome_text_Wizard">Welcome Back</string>
+    <string name="signin_now">Signin</string>
+    <string name="log_in">SignIn</string>
+    <string name="app_forgot">Recover</string>
+    <string name="action_email_address">Email Address</string>
+    <string name="app_submit">Submit</string>
+    <string name="enter_email_address">Enter Email Address</string>
+    <string name="enter_valid_email_address">Enter Valid Email Address</string>
+    <string name="hint_0">0</string>
 </resources>
