--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -93,7 +93,7 @@
     <string name="desc_fourth">Monitor Mother\'s and Baby\'s progress, Discharge once they are both ready</string>
     <string name="action_username">Username *</string>
     <string name="action_password">Password</string>
-    <string name="unable_to_login">Problem Login?</string>
+    <string name="unable_to_login">Forgot Password?</string>
     <string name="login_offline">Offline</string>
     <string name="action_provider_management">Monitoring and Assessment</string>
     <string name="action_new_born">New Born</string>
@@ -109,4 +109,5 @@
     <string name="enter_email_address">Enter Email Address</string>
     <string name="enter_valid_email_address">Enter Valid Email Address</string>
     <string name="hint_0">0</string>
+    <string name="app_slogan">Life saving milk</string>
 </resources>
