feat(core): change the patient list to accomodate the provided the designs

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -100,4 +100,7 @@
     <string name="action_post_natallabel">Post Natal</string>
     <string name="skip">Skip</string>
     <string name="exit_menu">Logout</string>
+
+    <string name="view"><u>View</u></string>
+
 </resources>
