--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -102,7 +102,6 @@
     <string name="exit_menu">Logout</string>
 
 
-
     <string name="welcome_text_Wizard">Welcome Back</string>
     <string name="signin_now">Signin</string>
     <string name="log_in">SignIn</string>
@@ -116,5 +115,12 @@
 
     <string name="view"><u>View</u></string>
     <string name="action_enter_pin">Enter New Pin</string>
+    <string name="action_confirm_password">Confirm Password</string>
+    <string name="action_new_password">New Password</string>
+    <string name="action_password_recovery">Account Recovery</string>
+    <string name="action_matching_password">Password does not match</string>
+    <string name="action_profile">My Account</string>
+    <string name="action_role">Role</string>
+    <string name="action_member">Added</string>
 
 </resources>
