--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -122,5 +122,6 @@
     <string name="action_profile">My Account</string>
     <string name="action_role">Role</string>
     <string name="action_member">Added</string>
+    <string name="action_signup">Sign Up</string>
 
 </resources>
