--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -133,5 +133,12 @@
     <string name="menu_dhm_reception">Receive DHM</string>
     <string name="menu_assess">Assess</string>
     <string name="menu_maternity">Record Details</string>
+    <string name="action_configure">Configuration</string>
+    <string name="action_server_url">Server Url</string>
+    <string name="enter_server_url">Enter Server URL</string>
+    <string name="enter_valid_server_url">Enter Valid Server Url</string>
+    <string name="action_server_url_demo">Demo Fhir URL</string>
+    <string name="menu_relation">Relation</string>
+    <string name="header_relation">Child/Children</string>
 
 </resources>
