--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -142,5 +142,6 @@
     <string name="header_relation">Child/Children</string>
     <string name="action_cancel">Cancel</string>
     <string name="menu_apgar_score">"Apgar "</string>
+    <string name="menu_new">New Born</string>
 
 </resources>
