--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -145,5 +145,6 @@
     <string name="menu_new">New Born</string>
     <string name="action_score">Apgar Score</string>
     <string name="action_assess">Assessment</string>
+    <string name="edit_child">Edit Child</string>
 
 </resources>
