--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -74,7 +74,7 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="action_maternity">Record Maternity</string>
     <string name="dashboard_maternity_icon_label">Maternity </string>
-    <string name="dashboard_newborn_icon_label"> Assessment</string>
+    <string name="dashboard_newborn_icon_label"> Discharge</string>
     <string name="action_patient_list">Registered Patients</string>
     <string name="dashboard_hmb_icon_label">Human Milk Bank</string>
     <string name="home_menu">Home</string>
@@ -158,6 +158,12 @@
     <string name="app_feeding_data">Feeding Data</string>
     <string name="app_health">Health Monitoring</string>
     <string name="action_assess_child">Child Asessment</string>
+    <string name="app_lactation">Lactation Assessment</string>
+    <string name="app_milk_expression">Milk Expression</string>
+    <string name="action_feeding_effectiveness">Feeding Effectiveness</string>
+    <string name="action_supplements">Supplements</string>
+    <string name="action_update_details">Update Details</string>
+    <string name="action_dhm_receival">DHM Receival</string>
     <string-array name="birds">
         <item>Filter By:</item>
         <item>Patient Name</item>
