patient internal transfer:

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -169,6 +169,9 @@
     <string name="action_assessment">Assess Child</string>
     <string name="action_discharge">Discharge Details</string>
     <string name="header_encounters">Encounters</string>
+    <string name="app_partial">Partial</string>
+    <string name="app_complete">Complete</string>
+    <string name="app_selection">Please select an option</string>
     <string-array name="birds">
         <item>Filter By:</item>
         <item>Patient Name</item>
