--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -251,7 +251,9 @@
     <string name="menu_dhm">DHM</string>
     <string name="app_consent">Consent</string>
     <string name="app_consent_date">Date of Consent</string>
+    <string name="dhm_reason">DHM Reason</string>
     <string name="app_dhm_reason">Reasons for Receiving DHM</string>
+    <string name="app_add">Additional</string>
     <string name="app_additional">Additional Feeds</string>
     <string name="app_feeding_supplements">Feeding Supplements</string>
     <string name="app_add_dhm_recipient">Add DHM Recipient</string>
@@ -357,6 +359,7 @@
     <string name="remarks">Feeding Remarks</string>
     <string name="changer">Change Prescription</string>
     <string name="total_taken">Total Taken</string>
+    <string name="total_input">Total Input</string>
     <string name="tv_vomit">Vomit</string>
     <string name="stool">Stool</string>
     <string name="diaper">Diaper Changed</string>
@@ -364,8 +367,29 @@
     <string name="edit_baby">Edit Baby</string>
     <string name="action_start">From Date</string>
     <string name="action_to">To Date</string>
-    <string name="menu_preterm">Preterm DHM</string>
+    <string name="menu_preterm">Pre Term DHM</string>
     <string name="menu_term">Term DHM</string>
+    <string name="bf">Breast Feeding</string>
+    <string name="_ebm">EBM</string>
+    <string name="formula">Formula</string>
+    <string name="dhm">DHM</string>
+    <string name="iv">IV Fluids</string>
+    <string name="volume">Volume mls</string>
+    <string name="menu_two">2 Hourly</string>
+    <string name="menu_three">3 Hourly</string>
+    <string name="menu_cup">Cup</string>
+    <string name="menu_ngt">NGT</string>
+    <string name="menu_ogt">OGT</string>
+    <string name="enter">Enter Feeds Prescription</string>
+    <string name="ebm_milk">Expressed Breast Milk</string>
+    <string name="dhm_milk">Donor Human Milk</string>
+    <string name="menu_yes">Yes</string>
+    <string name="menu_no">No</string>
+    <string name="supp">Supplement</string>
+    <string name="menu_formula">Formula</string>
+    <string name="type">Formula Type</string>
+    <string name="menu_term_fo">Term Formula</string>
+    <string name="menu_pre_term">Preterm Formula</string>
     <string-array name="birds">
         <item>Filter By:</item>
         <item>Patient Name</item>
@@ -380,29 +404,3 @@
     </string-array>
 
 </resources>
-
-    <!--
-                        <androidx.constraintlayout.widget.ConstraintLayout
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1.6">
-
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:rotation="-90"
-                                android:text="@string/number_of_babies"
-                                android:textColor="@color/dim_red"
-                                app:layout_constraintHeight_percent="0.3"
-                                app:layout_constraintStart_toStartOf="parent"
-                                app:layout_constraintTop_toTopOf="parent" />
-
-                            <com.github.mikephil.charting.charts.LineChart
-                                android:id="@+id/mortality_chart"
-                                android:layout_width="1000dp"
-                                android:visibility="visible"
-                                android:layout_height="400dp"
-                                android:layout_weight="1.6" />
-                        </androidx.constraintlayout.widget.ConstraintLayout>-->
-
-    <!--    -->
