--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -390,11 +390,10 @@
     <string name="type">Formula Type</string>
     <string name="menu_term_fo">Term Formula</string>
     <string name="menu_pre_term">Preterm Formula</string>
+    <string name="update">Last Update</string>
     <string-array name="birds">
         <item>Filter By:</item>
         <item>Baby\'s Name</item>
-        <item>National Id</item>
-        <item>Phone Number</item>
         <item>Mother IP</item>
     </string-array>
     <string-array name="sort">
