--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -322,6 +322,7 @@
     <string name="mother_breastfeeding_baby">Mother Breastfeeding Baby?</string>
     <string name="breast_problems">Breast Problems</string>
     <string name="mother_contraindicated">Is mother\'s milk contraindicated for Infant?</string>
+    <string name="app_contra">Mother\'s milk contraindicated for Infant</string>
     <string name="app_total_expressed">Total Milk Expressed</string>
     <string name="middle_lorem_ipsum">Online Sync</string>
     <string name="settings">Settings</string>
@@ -391,6 +392,7 @@
     <string name="menu_term_fo">Term Formula</string>
     <string name="menu_pre_term">Preterm Formula</string>
     <string name="update">Last Update</string>
+    <string name="app_age">Age (days)</string>
     <string-array name="birds">
         <item>Filter By:</item>
         <item>Baby\'s Name</item>
